# aviutl_psdtoolkit

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  audiobuf.pas  audioeffector.pas  auf.lpi  auf.lpr  aufmain.pas  aviutl.pas  build.bash  build.bat  builddoc.bash  cache.pas  callback.pas  decorate.html  faq.html  find.pas  forcepser.html  hook.pas  index.html  lag.pas  lua.pas  luafuncs.pas  main.pas  obj.html  otheranm.html  pack.bat  pfv.html  plugins.html  prep.html  psd.html  psdtoolipc.lpi  psdtoolipc.lpr  psdtoolipcassist.pas  (+6 more)
.github/workflows/: ghpages-updater.yml  main.yml  releaser.yml  test-build.yml
assets/: style.css
aviutl/script/: @PSDToolIPC.anm
aviutl/script/PSDToolIPC/: @PSDToolIPC.anm  PSDToolIPCLib.lua
docs/: audio.html  faq.html  forcepser.html  gcmzdrops.html  index.html  obj.html  otheranm.html  pfv.html  plugins.html  prep.html  preview.html  psd.html  setting.html  subobj.html  tutorial.html  tutorial2.html
docs/assets/: style.css
psdtoolipc/: async.go  gui.go  main.go  util.go
psdtoolipc/img/: image.go  layermgr.go  packbits.go  pfv.go  util.go
psdtoolipc/ipc/: encoding.go  ipc.go  util.go
psdtoolipc/layerview/: layerview.go
psdtoolipc/mainview/: mainview.go
psdtoolipc/nkhelper/: cgo.go
psdtoolipc/ods/: ods.go
src/: CMakeLists.txt
src/c/: CMakeLists.txt  assist.c  assist.rc  aviutl.c  aviutl.h  aviutl_text.c  aviutl_text_test.c  bridge.c  cache.c  cache.h  error_ptk.c  error_ptk.h  find.c  find.h  i18n.h  ipc.c  ipc.h  luafuncs.c  luafuncs.h  luafuncs_wordwrap.c  luafuncs_wordwrap.h  luafuncs_wordwrap_test.c  luastr.c  luastr.h  luautil.c  luautil.h  popupmenu.c  popupmenu.h  ptklayer.c  ptklayer.h  setting.c  setting.h  speak.c  speak.h  util.c  util.h  version.h.in
src/c/3rd/aviutl_sdk/: filter.h  license.txt
src/c/3rd/fft/: fftsg.c
src/c/kerning/: CMakeLists.txt  convexhull.c  convexhull.h  convexhull_test.c  debug.h  distance.c  distance.h  glyphoutline.c  glyphoutline.h  glyphoutline_test.c  kerning.c  kerning.h  kerning_pairs.c  kerning_pairs.h  kerning_pairs_test.c  kerning_test.c  point.c  point.h  point_test.c
src/c/wordwrap/: CMakeLists.txt  aviutl_text.c  aviutl_text.h  aviutl_text_ex.c  aviutl_text_ex.h  aviutl_text_ex_test.c  aviutl_text_test.c  bdx.c  bdx.h  bdx_cache.c  bdx_cache.h  canvas.c  canvas.h  cyrb64.h  glyph.c  glyph.h  line_reader.c  line_reader.h  rule.c  rule.h  text_cache.c  text_cache.h
src/cmake/: extract-zip.cmake  makelib.cmake  version.cmake
src/docs/: CMakeLists.txt  audio.md  decorate.md  faq.md  faview.md  forcepser.md  gcmzdrops.md  howtouse.md  index.md  install.md  menu.md  obj.md  otheranm.md  pfv.md  plugins.md  prep.md  preview.md  psd.md  psd2.md  rootindex.html  setting.md  subobj.md  subtitle.md  template.html  tutorial.md  tutorial2.md
src/docs/assets/: script-builder.js  style.css
src/docs/filter/: link-md2html.lua  remove-colgroup.lua
src/exa/: Blink.exa  LipSync.exa  LipSyncVowels.exa  MultiPurposeSlider.exa  MultiPurposeSlider_en.exa  NewObject.exa  Override.exa  Phoneme.exa  Phoneme_en.exa  PrepSubtitle.exa  PrepSubtitle_en.exa  Render.exa  SimpleView.exa  Subtitle.exa  SubtitleFast.exa  SubtitleFast_en.exa  SubtitleStep.exa  Subtitle_en.exa  TalkDetector.exa  TalkDetectorSetting.exa  TalkDetector_en.exa  WordWrapText.exa  WordWrapText_en.exa
src/go/: CMakeLists.txt  PSDToolKit.rc  async.go  go.mod  go.sum  gui.go  gui_gdip.go  gui_opengl.go  main.go  util.go
src/go/assets/: assets.go
src/go/assets/data/: icon.afdesign
src/go/assets/datasrc/symbols/: README.md
src/go/clipboard/: clipboard.go
src/go/gc/: gc.go
src/go/gui/: async.go  gui.go  gui_gdip.go  gui_opengl.go
src/go/gui/imagelist/: imagelist.go
src/go/gui/layerview/: layerview.go
src/go/gui/mainview/: async.go  mainview.go
src/go/gui/tabview/: tabview.go
src/go/img/: image.go  layermgr.go  layermgr_test.go  layerstate.go  layerstate_test.go  packbits.go  packbits_test.go  pfv.go  serialize.go  serialize_test.go  util.go  util_test.go
src/go/img/internal/packbits/: packbits.go  packbits_test.go
src/go/img/prop/: prop.go  prop_test.go
src/go/img/testdata/: flipx.psd  test.psd
src/go/imgmgr/editing/: editing.go
src/go/imgmgr/source/: encoding.go  source.go
src/go/imgmgr/temporary/: temporary.go
src/go/ipc/: encoding.go  ipc.go  util.go
src/go/jobqueue/: jobqueue.go  jobqueue_test.go
src/go/layerview/: layerview.go
src/go/mainview/: mainview.go
src/go/nkhelper/: cgo.go  gdip.go  genrange.go  jprange.h  nuklear.h  opengl.go
src/go/ods/: ods.go
src/go/warn/: warn.go
src/lazarus/: AssistPlugin.lpi  AssistPlugin.lpr  AudioMixerPlugin.lpi  AudioMixerPlugin.lpr  PSDToolKitBridge.lpi  PSDToolKitBridge.lpr  allpass.pas  assistmain.pas  audiobuf.pas  audioeffector.pas  audiomixer.pas  audiomixermain.pas  auf.lpi  auf.lpr  aufmain.pas  auxchannelstrip.pas  aviutl.pas  bridgemain.pas  cache.pas  channelstrip.pas  circularbuffer.pas  execute.pas  fftsg.pas  find.pas  fixedcircularbuffer.pas  lag.pas  lua.pas  luadll.lpi  luadll.lpr  luafuncs.pas  main.pas  mdadynamics.pas  multitapdelay.pas  onepole.pas  psdtoolkitassist.pas  rbgeqfilter.pas  rbjeqfilter.pas  remote.pas  reverb.pas  settingdialog.pas  (+3 more)
src/lazarus/ictalk/: ICTalk.lpi  ICTalk.lpr  ceviocontrol.pas  funcs.pas  ictalkdialog.pas  ictalkdialog.res  lua.pas  util.pas
src/lua/: @PSD.anm  @PSDToolKit.anm  @subobj.anm  Cache2Redirect.lua  PSDToolKit.lua  PSDToolKitIndex.lua  PSDToolKitLib.lua  PSDToolKitRedirect.lua  default.lua  setting.lua-template
src/lua/GCMZDrops/: lab.lua  psd.lua  srt.lua  wav.lua
src/lua/GCMZDrops/dropper/: ictalk.lua
src/lua/GCMZDrops/exa/: srt.exa
src/lua/exa/: lab_en.exa  lipsync.exa  srt.exa  wav.exa  wav_en.exa
